successfully debugged, added XAUUSDm

--- a/bot_trained.ipynb
+++ b/bot_trained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to connect to MT5\n",
+      "Connected successfully!\n",
       "\n"
      ]
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Trading Configuration\n",
-    "PAIR = \"XAUUSD\"\n",
+    "PAIR = \"XAUUSDm\"\n",
     "RISK_PERCENTAGE = 2  # Risk 2% per trade\n",
     "STOP_LOSS_PIPS = 30\n",
     "TAKE_PROFIT_PIPS = 90\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,25 +138,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fetch_moving_averages():\n",
     "    \"\"\" Fetch Moving Averages (MA 100, MA 5, MA 2) for trend confirmation. \"\"\"\n",
     "    rates = mt5.copy_rates_from_pos(PAIR, mt5.TIMEFRAME_H1, 0, 200)\n",
+    "    # rates = mt5.copy_rates_from_pos(PAIR, mt5.TIMEFRAME_M1, 0, 200)\n",
     "    df = pd.DataFrame(rates)\n",
     "    \n",
     "    df[\"MA100\"] = df[\"close\"].rolling(window=100).mean()\n",
     "    df[\"MA5\"] = df[\"close\"].rolling(window=5).mean()\n",
     "    df[\"MA2\"] = df[\"close\"].rolling(window=2).mean()\n",
     "    \n",
-    "    return df.iloc[-1]  # Return latest row"
+    "    return df.iloc[-1]  # Return latest row\n",
+    "    # print(mt5)\n",
+    "\n",
+    "# fetch_moving_averages()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def fetch_moving_averages():\n",
+    "#     rates = mt5.copy_rates_from_pos(PAIR, mt5.TIMEFRAME_H1, 0, 200)\n",
+    "#     if rates is None or len(rates) == 0:\n",
+    "#         print(\"❌ Failed to fetch market data.\")\n",
+    "#         return None\n",
+    "\n",
+    "#     df = pd.DataFrame(rates)\n",
+    "#     if 'close' not in df.columns:\n",
+    "#         print(\"❌ 'close' column not found in the DataFrame.\")\n",
+    "#         print(df.head())\n",
+    "#         print(df.columns)\n",
+    "#         return None\n",
+    "\n",
+    "#     df[\"MA100\"] = df[\"close\"].rolling(window=100).mean()\n",
+    "#     df[\"MA5\"] = df[\"close\"].rolling(window=5).mean()\n",
+    "#     df[\"MA2\"] = df[\"close\"].rolling(window=2).mean()\n",
+    "#     # return df\n",
+    "#     return df.iloc[-1]  # Return latest row\n",
+    "\n",
+    "# # fetch_moving_averages()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
