fixed another bug

--- a/bot_trained.ipynb
+++ b/bot_trained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,9 @@
     "# Load variables from .env file\n",
     "load_dotenv()\n",
     "\n",
-    "YOUR_LOGIN = int(os.getenv(MT5_LOGIN))\n",
-    "YOUR_PWD = os.getenv(MT5_PWD)\n",
-    "SERVER = os.getenv(MT5_SERVER)"
+    "YOUR_LOGIN = int(os.getenv(\"MT5_LOGIN\"))\n",
+    "YOUR_PWD = os.getenv(\"MT5_PWD\")\n",
+    "SERVER = os.getenv(\"MT5_SERVER\")"
    ]
   },
   {
@@ -91,8 +91,8 @@
    "outputs": [],
    "source": [
     "# Telegram Bot Configuration\n",
-    "TELEGRAM_BOT_TOKEN = os.getenv(BOT_TOKEN)\n",
-    "TELEGRAM_CHAT_ID = os.getenv(CHAT_ID)"
+    "TELEGRAM_BOT_TOKEN = os.getenv(\"BOT_TOKEN\")\n",
+    "TELEGRAM_CHAT_ID = os.getenv(\"CHAT_ID\")"
    ]
   },
   {
