calculate lot size

--- a/bot_trained.ipynb
+++ b/bot_trained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected successfully!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Connect to the MetaTrader 5 terminal\n",
     "if not mt5.initialize(login=YOUR_LOGIN, server=SERVER, password=YOUR_PWD):\n",
@@ -53,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account Balance: 245.96\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Get account information\n",
     "account_info = mt5.account_info()\n",
@@ -68,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Trading Configuration\n",
     "PAIR = \"XAUUSDm\"\n",
-    "RISK_PERCENTAGE = 2  # Risk 2% per trade\n",
+    "RISK_PERCENTAGE = 3  # Risk 3% per trade\n",
     "STOP_LOSS_PIPS = 30\n",
     "TAKE_PROFIT_PIPS = 90\n",
     "WIN_RATE = 0.55  # Based on backtest\n",
@@ -86,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,16 +246,47 @@
    "outputs": [],
    "source": [
     "def calculate_lot_size(balance):\n",
-    "    \"\"\" Calculate lot size based on 2% risk per trade. \"\"\"\n",
+    "    \"\"\" Calculate lot size based on 3% risk per trade. \"\"\"\n",
     "    risk_amount = balance * (RISK_PERCENTAGE / 100)\n",
     "    lot_size = risk_amount / STOP_LOSS_PIPS  # Adjust based on pip value\n",
     "    print(f\"Lot Size used: {round(lot_size, 2)}\")\n",
-    "    return round(lot_size, 2)  "
+    "    return round(lot_size, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternative Lot size calculator\n",
+    "def calculate_gold_lot_size(risk_amount_usd, stop_loss_pips, pip_value=0.01, pip_worth_per_lot=10):\n",
+    "    \"\"\"\n",
+    "    Calculates lot size for GOLD (XAUUSD)\n",
+    "    \n",
+    "    Args:\n",
+    "        risk_amount_usd (float): Amount you're willing to risk (in USD)\n",
+    "        stop_loss_pips (float): Stop loss in pips\n",
+    "        pip_value (float): Pip value for XAUUSD (default is 0.01)\n",
+    "        pip_worth_per_lot (float): Dollar value per pip for 1.00 lot (standard is $10 for Gold)\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Lot size\n",
+    "    \"\"\"\n",
+    "    stop_loss_in_dollars = stop_loss_pips * (pip_worth_per_lot / (1 / pip_value))\n",
+    "    lot_size = risk_amount_usd / stop_loss_in_dollars\n",
+    "    return round(lot_size, 3)\n",
+    "\n",
+    "# Example usage:\n",
+    "risk = 3  # USD\n",
+    "sl_pips = 30  # pips\n",
+    "lot = calculate_gold_lot_size(risk, sl_pips)\n",
+    "print(f\"Your lot size should be: {lot}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,9 +423,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lot Size used: 0.16\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'ask'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[192], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Start Trading\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtrading_bot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[191], line 8\u001b[0m, in \u001b[0;36mtrading_bot\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m trade \u001b[38;5;241m=\u001b[39m place_trade(balance)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trade:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mtrailing_stop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Simulate trade outcome\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     exit_price \u001b[38;5;241m=\u001b[39m fetch_market_price()\n",
+      "Cell \u001b[1;32mIn[190], line 8\u001b[0m, in \u001b[0;36mtrailing_stop\u001b[1;34m(trade)\u001b[0m\n\u001b[0;32m      5\u001b[0m trade_type \u001b[38;5;241m=\u001b[39m trade[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 8\u001b[0m     current_price \u001b[38;5;241m=\u001b[39m \u001b[43mfetch_market_price\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m trade_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbuy\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m current_price \u001b[38;5;241m>\u001b[39m entry_price \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m30\u001b[39m:\n\u001b[0;32m     10\u001b[0m         new_stop_loss \u001b[38;5;241m=\u001b[39m current_price \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m20\u001b[39m\n",
+      "Cell \u001b[1;32mIn[182], line 6\u001b[0m, in \u001b[0;36mfetch_market_price\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m tick \u001b[38;5;241m=\u001b[39m mt5\u001b[38;5;241m.\u001b[39msymbol_info_tick(PAIR)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# print(f\"Current market Ask price: {tick.ask}\")\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtick\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mask\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'ask'"
+     ]
+    }
+   ],
    "source": [
     "# Start Trading\n",
     "trading_bot()"
