added analysis files of my strategy

--- a/bot_trained.ipynb
+++ b/bot_trained.ipynb
@@ -249,18 +249,27 @@
     "    \"\"\" Calculate lot size based on 3% risk per trade. \"\"\"\n",
     "    risk_amount = balance * (RISK_PERCENTAGE / 100)\n",
     "    lot_size = risk_amount / STOP_LOSS_PIPS  # Adjust based on pip value\n",
-    "    print(f\"Lot Size used: {round(lot_size, 2)}\")\n",
+    "    print(f\"Lot Size used: {round(lot_size, 2)}\") \n",
+    "    # print(f\"Lot Size used: {round(lot_size, 2) - 0.1}\") \n",
     "    return round(lot_size, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your lot size should be: 0.4 and AMOUNT: 2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Alternative Lot size calculator\n",
-    "def calculate_gold_lot_size(risk_amount_usd, stop_loss_pips, pip_value=0.01, pip_worth_per_lot=10):\n",
+    "def calculate_gold_lot_size(risk_percentage, stop_loss_pips, pip_value=0.01, pip_worth_per_lot=10):\n",
     "    \"\"\"\n",
     "    Calculates lot size for GOLD (XAUUSD)\n",
     "    \n",
@@ -269,19 +278,22 @@
     "        stop_loss_pips (float): Stop loss in pips\n",
     "        pip_value (float): Pip value for XAUUSD (default is 0.01)\n",
     "        pip_worth_per_lot (float): Dollar value per pip for 1.00 lot (standard is $10 for Gold)\n",
+    "        risk_percentage: Percentage of Account willing to loose\n",
     "\n",
     "    Returns:\n",
     "        float: Lot size\n",
     "    \"\"\"\n",
     "    stop_loss_in_dollars = stop_loss_pips * (pip_worth_per_lot / (1 / pip_value))\n",
+    "    risk_amount_usd = 100 * (risk_percentage / 100)\n",
     "    lot_size = risk_amount_usd / stop_loss_in_dollars\n",
-    "    return round(lot_size, 3)\n",
+    "    return {round(lot_size, 3), risk_amount_usd}\n",
     "\n",
     "# Example usage:\n",
-    "risk = 3  # USD\n",
-    "sl_pips = 30  # pips\n",
-    "lot = calculate_gold_lot_size(risk, sl_pips)\n",
-    "print(f\"Your lot size should be: {lot}\")\n"
+    "# risk = 3  # USD\n",
+    "risk = 2  # percentage Risk\n",
+    "sl_pips = 50  # `pips`\n",
+    "lot, amount = calculate_gold_lot_size(risk, sl_pips)\n",
+    "print(f\"Your lot size should be: {lot} and AMOUNT: {amount}\")\n"
    ]
   },
   {
