--- a/bot_trained.ipynb
+++ b/bot_trained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account Balance: 245.96\n",
+      "Account Balance: 168.02\n",
       "\n"
      ]
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,12 +99,12 @@
     "MAX_LOSSES = 3  # Stop trading after 3 consecutive losses\n",
     "loss_streak = 0  # Track consecutive losses\n",
     "START_BALANCE = 100\n",
-    "PIP_VALUE = 0.1 # GOLD PIP value #0.01"
+    "PIP_VALUE = 0.01 # GOLD PIP value #0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,12 +251,13 @@
     "    lot_size = risk_amount / STOP_LOSS_PIPS  # Adjust based on pip value\n",
     "    print(f\"Lot Size used: {round(lot_size, 2)}\") \n",
     "    # print(f\"Lot Size used: {round(lot_size, 2) - 0.1}\") \n",
-    "    return round(lot_size, 2)"
+    "    return round(lot_size, 2)\n",
+    "    # return 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,28 +436,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lot Size used: 0.16\n"
+      "Lot Size used: 0.17\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'ask'",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[192], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Start Trading\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtrading_bot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[191], line 8\u001b[0m, in \u001b[0;36mtrading_bot\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m trade \u001b[38;5;241m=\u001b[39m place_trade(balance)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trade:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mtrailing_stop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Simulate trade outcome\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     exit_price \u001b[38;5;241m=\u001b[39m fetch_market_price()\n",
-      "Cell \u001b[1;32mIn[190], line 8\u001b[0m, in \u001b[0;36mtrailing_stop\u001b[1;34m(trade)\u001b[0m\n\u001b[0;32m      5\u001b[0m trade_type \u001b[38;5;241m=\u001b[39m trade[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 8\u001b[0m     current_price \u001b[38;5;241m=\u001b[39m \u001b[43mfetch_market_price\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m trade_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbuy\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m current_price \u001b[38;5;241m>\u001b[39m entry_price \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m30\u001b[39m:\n\u001b[0;32m     10\u001b[0m         new_stop_loss \u001b[38;5;241m=\u001b[39m current_price \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m20\u001b[39m\n",
-      "Cell \u001b[1;32mIn[182], line 6\u001b[0m, in \u001b[0;36mfetch_market_price\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m tick \u001b[38;5;241m=\u001b[39m mt5\u001b[38;5;241m.\u001b[39msymbol_info_tick(PAIR)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# print(f\"Current market Ask price: {tick.ask}\")\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtick\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mask\u001b[49m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'ask'"
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[80], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Start Trading\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtrading_bot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[79], line 8\u001b[0m, in \u001b[0;36mtrading_bot\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m trade \u001b[38;5;241m=\u001b[39m place_trade(balance)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trade:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mtrailing_stop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Simulate trade outcome\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     exit_price \u001b[38;5;241m=\u001b[39m fetch_market_price()\n",
+      "Cell \u001b[1;32mIn[78], line 22\u001b[0m, in \u001b[0;36mtrailing_stop\u001b[1;34m(trade)\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated Sell Trailing Stop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m         send_telegram_message(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated Sell Trailing Stop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
