--- a/bot_trained.ipynb
+++ b/bot_trained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account Balance: 168.02\n",
+      "Account Balance: 150.75\n",
       "\n"
      ]
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,14 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lot Size used: 0.17\n"
+      "Lot Size used: 0.15\n",
+      "Trade failed: Invalid stops \n",
+      "\n",
+      "Lot Size used: 0.15\n"
      ]
     },
     {
@@ -453,9 +456,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[80], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Start Trading\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtrading_bot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[79], line 8\u001b[0m, in \u001b[0;36mtrading_bot\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m trade \u001b[38;5;241m=\u001b[39m place_trade(balance)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trade:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mtrailing_stop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Simulate trade outcome\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     exit_price \u001b[38;5;241m=\u001b[39m fetch_market_price()\n",
-      "Cell \u001b[1;32mIn[78], line 22\u001b[0m, in \u001b[0;36mtrailing_stop\u001b[1;34m(trade)\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated Sell Trailing Stop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m         send_telegram_message(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated Sell Trailing Stop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[120], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Start Trading\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtrading_bot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[119], line 8\u001b[0m, in \u001b[0;36mtrading_bot\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m trade \u001b[38;5;241m=\u001b[39m place_trade(balance)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trade:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mtrailing_stop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Simulate trade outcome\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     exit_price \u001b[38;5;241m=\u001b[39m fetch_market_price()\n",
+      "Cell \u001b[1;32mIn[118], line 22\u001b[0m, in \u001b[0;36mtrailing_stop\u001b[1;34m(trade)\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated Sell Trailing Stop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m         send_telegram_message(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated Sell Trailing Stop: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstop_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
